2.1/k8s192/apple/networkpolicy/1-allow-ingress.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allowingress
spec:
  podSelector:
    matchLabels:
      app: apple-demo
  ingress:
    - from:
      - ipBlock:
          cidr: 100.64.112.7/31
      ports:
        - protocol: TCP
          port: 80
