2.1/k8s192/apple/networkpolicy/allow-http.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allowingress
spec:
  podSelector:
    matchLabels:
      app: apple-demo
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: apple-demo
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: apple-demo
      ports:
        - protocol: TCP
          port: 80
